Add Edit and Delete functionality of dailers done

--- a/MobinorWeb/Content/templates/Admin/login/adminHome.html
+++ b/MobinorWeb/Content/templates/Admin/login/adminHome.html
@@ -1,18 +1,12 @@
-﻿
-<nav class="{{active}}" ng-click="$event.preventDefault()">
-    <!-- When a link in the menu is clicked, we set the active variable -->
-    <a href="#" class="home" ng-model="active" ng-click="active='Dailer'">Dailer</a>
-    <a href="#" class="about" ng-click="active='Add Dailers'">Add Dailers</a>
-    <a href="#" class="contact" ng-click="active='contact'">Contact</a>
-</nav>
-
-<p ng-show="active">You chose <b>{{active}}</b>
-
-    <!--<div dailer-details></div>-->
-    </p>
-<div ng-if="active === 'Dailer'">
+﻿<div ng-controller="dailerDetailsController as dd">
+    <nav class="{{active}}" ng-click="$event.preventDefault()" >
+        <a href="#" class="home" ng-model="active" ng-click="active='Dailer'">Dailer</a>
+        <a href="#" class="dailers" ng-click="dd.addDailer()" ng-init="active='Add Dailer'">Add Dailer</a>
+        <a href="#" class="contact" ng-click="active='contact'">Contact</a>
+    </nav>
+    <div ng-if="active === 'Dailer'">
+    </div>
     <div dailer-details></div>
 </div>
-
 
 
