--- a/MobinorWeb/Views/Shared/_Layout.cshtml
+++ b/MobinorWeb/Views/Shared/_Layout.cshtml
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CityCallGlobe Application</title>
-    
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
 
     <link href="~/Content/css/main.css" rel="stylesheet" />
     <link rel="author" href="humans.txt">
