--- a/MobinorWeb/Content/templates/Admin/dailer/dailerDetails.tmpl.html
+++ b/MobinorWeb/Content/templates/Admin/dailer/dailerDetails.tmpl.html
@@ -1,3 +1,3 @@
 ﻿<div class="container">
-    <div id="grid1" ui-grid="gridOptions" class="grid"></div>
+    <div id="grid1" ui-grid="gridOptions" class="grid" ui-grid-edit></div>
 </div>
