css files changed

--- a/MobinorWeb/Content/templates/Home.tmpl.html
+++ b/MobinorWeb/Content/templates/Home.tmpl.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>News Ticker using jquery</title>
     <!-- 	<link rel="stylesheet" href="css/style.css"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">-->
+    <link rel="stylesheet" href="Content/css/skeleton.min.css">
     <link rel="stylesheet" href="Content/css/main.css">
     <link rel="author" href="humans.txt">
     <link rel="stylesheet" href="Content/css/jquery.bxslider.css">
@@ -203,7 +204,7 @@
     </div>
    
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
     <script src="../../Scripts/MobinorJS/ticker.js"></script>
     <script src="../../Scripts/MobinorJS/unslider-min.js"></script>
     <script src="../../Scripts/MobinorJS/jquery.bxslider.min.js"></script>
